# internal/handlers/dish.go
@@ -126,3 +126,81 @@ func (h *DishHandler) GetDishByID(ctx echo.Context) error {
 
 	return response.ResponseSuccess(ctx, http.StatusOK, dish)
 }
+
+// @Summary		Like dish
+// @Description	Like an dish
+// @Tags			dish
+// @Security		BasicAuth
+// @Security		Bearer
+// @Accept			json
+// @Produce		json
+// @Param			id	path		string	true	"Dish ID (UUID)"
+// @Success		200	{object}	response.GeneralResponse
+// @Failure		400	{object}	response.GeneralResponse
+// @Failure		404	{object}	response.GeneralResponse
+// @Failure		500	{object}	response.GeneralResponse
+// @Router			/dish/{id}/like [post]
+func (h *DishHandler) LikeDish(ctx echo.Context) error {
+	t := time.Now().UTC()
+	defer func() {
+		metrics.DbMetricsIns.ApiSum.WithLabelValues("LikeDish").
+			Observe(time.Since(t).Seconds())
+	}()
+
+	authInfo, ok := ctx.Get(models.AuthInfoKey).(models.AuthenticationInfo)
+	if !ok {
+		return response.ResponseFailMessage(ctx, http.StatusUnauthorized, "unauthorized")
+	}
+
+	idParam := ctx.Param("id")
+	id, err := uuid.Parse(idParam)
+	if err != nil {
+		return response.ResponseError(ctx, response.NewBadRequestError("Invalid dish ID format."))
+	}
+
+	err = h.dishUseCase.LikeDish(ctx.Request().Context(), id, authInfo)
+	if err != nil {
+		return response.ResponseError(ctx, err)
+	}
+
+	return response.ResponseSuccess(ctx, http.StatusOK, "Dish liked successfully.")
+}
+
+// @Summary		Unlike dish
+// @Description	Unlike an dish
+// @Tags			dish
+// @Security		BasicAuth
+// @Security		Bearer
+// @Accept			json
+// @Produce		json
+// @Param			id	path		string	true	"Dish ID (UUID)"
+// @Success		200	{object}	response.GeneralResponse
+// @Failure		400	{object}	response.GeneralResponse
+// @Failure		404	{object}	response.GeneralResponse
+// @Failure		500	{object}	response.GeneralResponse
+// @Router			/dish/{id}/unlike [post]
+func (h *DishHandler) UnlikeDish(ctx echo.Context) error {
+	t := time.Now().UTC()
+	defer func() {
+		metrics.DbMetricsIns.ApiSum.WithLabelValues("UnlikeDish").
+			Observe(time.Since(t).Seconds())
+	}()
+
+	authInfo, ok := ctx.Get(models.AuthInfoKey).(models.AuthenticationInfo)
+	if !ok {
+		return response.ResponseFailMessage(ctx, http.StatusUnauthorized, "unauthorized")
+	}
+
+	idParam := ctx.Param("id")
+	id, err := uuid.Parse(idParam)
+	if err != nil {
+		return response.ResponseError(ctx, response.NewBadRequestError("Invalid dish ID format."))
+	}
+
+	err = h.dishUseCase.UnlikeDish(ctx.Request().Context(), id, authInfo)
+	if err != nil {
+		return response.ResponseError(ctx, err)
+	}
+
+	return response.ResponseSuccess(ctx, http.StatusOK, "Dish unliked successfully.")
+}
